# httpserver

./: .clang-format  CMakeLists.txt  README.md
include/http/: FunctionTraits.h  Request.h  RequestHandler.h  Response.h  Router.h  Server.h
include/http/internal/: RequestHandler.h
src/: InternalRequest.cpp  InternalRequest.h  MHDUtil.h  Request.cpp  RequestHandler.cpp  Response.cpp  Router.cpp  Server.cpp  ServerImpl.cpp  ServerImpl.h
